# TeamWaveAssignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
Frontend/: Dockerfile  index.html  package.json
Frontend/scripts/: displayData.js  fetchData.js  index.js
Frontend/src/: App.tsx  axios.config.ts  interface.ts
Frontend/src/components/: AdvancedSearch.tsx  NormalSearch.tsx  NormalSearchData.tsx
TeamWaveAssignment/: asgi.py  settings.py  urls.py  wsgi.py
core/: middleware.py  urls.py  views.py
static/scripts/: displayData.js  fetchData.js  index.js
templates/: index.html
